--- a/css/common2.css
+++ b/css/common2.css
@@ -231,9 +231,7 @@ div.modal-wrapper{ position: fixed; z-index: 10; left: 0; top:0; right: auto; bo
 	background-color:rgba(0, 0, 0,.7); display:flex; align-items: center; justify-content: center; padding: 20px; }
 div.modal{max-width: 1000px; margin: 0 auto; height: 100%; background-color:#171717; border:rgba(255, 255, 255, .2) solid 1px; position:relative;border-radius: 20px; padding: 40px;}
 div.modal button.btn_close{ position: absolute; top: 0px; right: 0px;
-width: 50px; height: 50px; display: inline-block; border-radius: 25px; border: none; 
-	background-color: transparent; box-shadow: 0 0 6px rgba(0, 0, 0, .7); 
-}
+width: 50px; height: 50px; display: inline-block; border-radius: 25px; border: none;	background-color: transparent;}
 div.modal button.btn_close img{ width:40px; }
 div.modal div.conts{ position:relative; height: 100%; }
 /*div.modal div.m-head{ position: absolute; top: -10px; left:calc(100%/2); display: inline-block; background-color:transparent; }
