--- a/css/common.css
+++ b/css/common.css
@@ -240,8 +240,8 @@ div.p_Contact button:hover{ background-color:#58BDAD; }
 div.modal-wrapper{ position: fixed; z-index: 10; left: 0; top:0; right: auto; bottom:0; width: 100%; height: 100%; 
 	background-color:rgba(0, 0, 0,.7); display:flex; align-items: center; justify-content: center; padding: 20px; }
 div.modal{max-width: 1000px; margin: 0 auto; height: 100%; background-color:#171717; border:rgba(255, 255, 255, .2) solid 1px; position:relative;border-radius: 20px; padding: 40px;}
-div.modal button.btn_close{ position: absolute; top: 0px; right: 0px;
-width: 50px; height: 50px; display: inline-block; border-radius: 25px; border: none;	background-color: transparent;}
+div.modal button.btn_close{ position: absolute; bottom: 0px; left: 0px;
+width: 100%; height: 50px; display: inline-block; border-radius: 25px; border: none;	background-color: transparent;}
 div.modal button.btn_close img{ width:40px; }
 div.modal div.conts{ position:relative; height: 100%; }
 div.modal div.conts div.page{overflow: hidden; overflow-y: auto; height: 100%; background-color: transparent;}
@@ -280,7 +280,7 @@ div.p_Expe ul li span:first-child{ font-weight: bold; }
 div.p_Expe ul li span:last-child{ margin-right: 0; }
 div.p_Expe ul li span.c_name{ width: 100px; }
 div.p_Expe ul li span.c_local{ width: 40px; }
-div.p_Expe ul li span a{ color: #508FEC; word-break: break-all; }
+div.p_Expe ul li span a{ color: #67DBC9; word-break: break-all; }
 @media (max-width: 769px) {
 	div.p_Expe div{padding: 20px;}
 	div.p_Expe ul li{ padding-top: 0;}
